Refactoring bootgrid related methods and integerating storage changes

--- a/ui/js/Makefile.am
+++ b/ui/js/Makefile.am
@@ -18,6 +18,7 @@
 jsdir = $(datadir)/wok/plugins/ginger/ui/js
 
 dist_js_DATA = \
+  ginger-bootgrid.js \
 	host-admin.js \
 	host-storage.js \
 	util.js \
