Fix for storage format data transfer from parent window  to modal issue.

--- a/ui/pages/Makefile.am
+++ b/ui/pages/Makefile.am
@@ -22,5 +22,6 @@ htmldir = $(datadir)/wok/plugins/ginger/ui/pages
 dist_html_DATA = \
 	host-admin.html.tmpl \
 	host-storage.html.tmpl \
+	host-storage-format.html.tmpl \
 	i18n.json.tmpl \
 	$(NULL)
